...

    @ViewBuilder
    private var addPuzzleMenuContents: some View {
        Button {
            present = true
        } label: {
            Label("Add puzzle", systemImage: "plus")
        }
        .accessibilityIdentifier(A11yID.addPuzzleButton)

        Button {
            showScanner = true
        } label: {
...
